--- a/common/app/assets/stylesheets/module/_cta.scss
+++ b/common/app/assets/stylesheets/module/_cta.scss
@@ -68,7 +68,7 @@
 /* Blue
    ========================================================================== */
 .cta--blue {
-  background-color: $blue;
+  background-color: $linkBlue;
 
   .cta__text {
     color: #fff;
