--- a/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
+++ b/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
@@ -2,72 +2,74 @@
 
 .i-arrow-blue-down { background-position: -8px -8px; width: 15px; height: 7.319px; }
 
-.i-arrow-large-down { background-position: -23px -8px; width: 26px; height: 14px; }
+.i-arrow-double-white { background-position: -23px -8px; width: 15px; height: 13.042px; }
 
-.i-arrow-small-down { background-position: -49px -8px; width: 12.667px; height: 7px; }
+.i-arrow-large-down { background-position: -38px -8px; width: 26px; height: 14px; }
 
-.i-arrow-small-up { background-position: -61px -8px; width: 12.667px; height: 7.083px; }
+.i-arrow-small-down { background-position: -64px -8px; width: 12.667px; height: 7px; }
 
-.i-arrow-white-down { background-position: -73px -8px; width: 15px; height: 7.319px; }
+.i-arrow-small-up { background-position: -76px -8px; width: 12.667px; height: 7.083px; }
 
-.i-close-x { background-position: -88px -8px; width: 14.5px; height: 14.5px; }
+.i-arrow-white-down { background-position: -88px -8px; width: 15px; height: 7.319px; }
 
-.i-date { background-position: -102px -8px; width: 10px; height: 10px; }
+.i-close-x { background-position: -103px -8px; width: 14.5px; height: 14.5px; }
 
-.i-default-witness-avatar { background-position: -112px -8px; width: 32px; height: 32px; }
+.i-date { background-position: -117px -8px; width: 10px; height: 10px; }
 
-.i-ee-add-button { background-position: -144px -8px; width: 54px; height: 47px; }
+.i-default-witness-avatar { background-position: -127px -8px; width: 32px; height: 32px; }
 
-.i-filter-arrow-down { background-position: -212px -8px; width: 20px; height: 11.431px; }
+.i-ee-add-button { background-position: -159px -8px; width: 54px; height: 47px; }
 
-.i-filter-arrow-left { background-position: -232px -8px; width: 8.703px; height: 15px; }
+.i-filter-arrow-down { background-position: -227px -8px; width: 20px; height: 11.431px; }
 
-.i-filter-arrow-right { background-position: -240px -8px; width: 8.702px; height: 15px; }
+.i-filter-arrow-left { background-position: -247px -8px; width: 8.703px; height: 15px; }
 
-.i-filter-arrow-up { background-position: -248px -8px; width: 20px; height: 11.431px; }
+.i-filter-arrow-right { background-position: -255px -8px; width: 8.702px; height: 15px; }
 
-.i-fullscreen-toggle { background-position: -268px -8px; width: 12px; height: 12px; }
+.i-filter-arrow-up { background-position: -263px -8px; width: 20px; height: 11.431px; }
 
-.i-guardian-logo { background-position: -280px -8px; width: 107.667px; height: 20.125px; }
+.i-fullscreen-toggle { background-position: -283px -8px; width: 12px; height: 12px; }
 
-.i-image-inverted { background-position: -387px -8px; width: 12px; height: 9px; }
+.i-guardian-logo { background-position: -295px -8px; width: 107.667px; height: 20.125px; }
 
-.i-image-white { background-position: -399px -8px; width: 12px; height: 9px; }
+.i-image-inverted { background-position: -402px -8px; width: 12px; height: 9px; }
 
-.i-image { background-position: -411px -8px; width: 12px; height: 9px; }
+.i-image-white { background-position: -414px -8px; width: 12px; height: 9px; }
 
-.i-livequote-after { background-position: -423px -8px; width: 37px; height: 20px; }
+.i-image { background-position: -426px -8px; width: 12px; height: 9px; }
 
-.i-livequote-before { background-position: -460px -8px; width: 37px; height: 20px; }
+.i-livequote-after { background-position: -438px -8px; width: 37px; height: 20px; }
 
-.i-menu-active { background-position: -497px -8px; width: 18px; height: 12px; }
+.i-livequote-before { background-position: -475px -8px; width: 37px; height: 20px; }
 
-.i-menu { background-position: -515px -8px; width: 18px; height: 12px; }
+.i-menu-active { background-position: -512px -8px; width: 18px; height: 12px; }
 
-.i-more-arrow { background-position: -533px -8px; width: 10px; height: 8px; }
+.i-menu { background-position: -530px -8px; width: 18px; height: 12px; }
 
-.i-powered-by-ee { background-position: -497px -20px; width: 68px; height: 31px; }
+.i-more-arrow { background-position: -548px -8px; width: 10px; height: 8px; }
 
-.i-quote-marks { background-position: -212px -55px; width: 64px; height: 32px; }
+.i-powered-by-ee { background-position: -227px -28px; width: 68px; height: 31px; }
 
-.i-red-card { background-position: -290px -55px; width: 9px; height: 12px; }
+.i-quote-marks { background-position: -309px -28px; width: 64px; height: 32px; }
 
-.i-search-blue { background-position: -299px -55px; width: 14px; height: 14px; }
+.i-red-card { background-position: -387px -28px; width: 9px; height: 12px; }
 
-.i-search { background-position: -313px -55px; width: 14px; height: 14px; }
+.i-search-blue { background-position: -396px -28px; width: 14px; height: 14px; }
 
-.i-sport-arrow-small { background-position: -327px -55px; width: 5.802px; height: 10px; }
+.i-search { background-position: -410px -28px; width: 14px; height: 14px; }
 
-.i-sport-arrow { background-position: -332px -55px; width: 8.703px; height: 15px; }
+.i-sport-arrow-small { background-position: -424px -28px; width: 5.802px; height: 10px; }
 
-.i-story-quote { background-position: -340px -55px; width: 49px; height: 25px; }
+.i-sport-arrow { background-position: -429px -28px; width: 8.703px; height: 15px; }
 
-.i-tool { background-position: -389px -55px; width: 13px; height: 13px; }
+.i-story-quote { background-position: -437px -28px; width: 49px; height: 25px; }
 
-.i-top-stories-active { background-position: -402px -55px; width: 16px; height: 16px; }
+.i-tool { background-position: -486px -28px; width: 13px; height: 13px; }
 
-.i-top-stories { background-position: -418px -55px; width: 16px; height: 16px; }
+.i-top-stories-active { background-position: -499px -28px; width: 16px; height: 16px; }
 
-.i-witness-logo { background-position: -434px -55px; width: 119px; height: 16px; }
+.i-top-stories { background-position: -515px -28px; width: 16px; height: 16px; }
 
-.i-yellow-card { background-position: -553px -55px; width: 9px; height: 12px; }
+.i-witness-logo { background-position: -387px -53px; width: 119px; height: 16px; }
+
+.i-yellow-card { background-position: -506px -53px; width: 9px; height: 12px; }
