--- a/common/app/views/fragments/footer.scala.html
+++ b/common/app/views/fragments/footer.scala.html
@@ -3,7 +3,10 @@
 <footer class="footer" data-link-name="footer" role="contentinfo">
 
     <div id="footer-nav">
-        <a class="top" data-link-name="back to top" href="#top">Back to top <i class="i i-arrow-small-up"></i></a>
+        <a class="cta cta--blue" data-link-name="back to top" href="#top">
+            <span class="cta__text">Back to top</span>
+            <span class="cta__btn cta__btn--right"><i class="i i-arrow-double-white"></i></span>
+        </a>
         @fragments.sections(page, true)
     </div>
 
