--- a/common/app/assets/stylesheets/layout/_layout.scss
+++ b/common/app/assets/stylesheets/layout/_layout.scss
@@ -81,6 +81,11 @@
 }
 
 .preload-msg {
-  padding: 50px 50px 250px 50px;
-  text-align: center;
+    padding: 50px 50px 250px 50px;
+    text-align: center;
+}
+
+.preload-msg .is-updating {
+  display: block;
+  margin: 10px auto;
 }
