--- a/common/app/assets/stylesheets/layout/_layout.scss
+++ b/common/app/assets/stylesheets/layout/_layout.scss
@@ -85,7 +85,7 @@
     text-align: center;
 }
 
-.preload-msg .is-updating {
+.swipeview-active .is-updating {
   display: block;
   margin: 10px auto;
 }
