--- a/common/app/views/fragments/header.scala.html
+++ b/common/app/views/fragments/header.scala.html
@@ -16,21 +16,16 @@
 
     <a href="#footer-nav" data-is-ajax="1" data-link-name="Sections" data-control-for="nav-popup-sections" class="control control--sections">
         <i class="i i-nav-divider"></i>
-        <span class="control__menu i i-menu">Sections</span>
+        <span class="control__text">Sections</span>
+        <i class="control__icon i i-menu"></i>
         <i class="i i-menu-active"></i>
-    </a>
-
-    <a href="https://www.google.co.uk/advanced_search?q=site:www.guardian.co.uk" data-link-name="Search icon" class="control control--search" data-control-for="nav-popup-search">
-        <i class="i i-nav-divider"></i>
-        <span class="h">Search</span>
-        <i class="i i-search"></i>
     </a>
 
     <a href="/top-stories" data-is-ajax="1" data-link-name="Top stories" data-control-for="nav-popup-topstories"
         class="control control--topstories">
         <i class="i i-nav-divider"></i>
-        <span>Top stories</span>
-        <i class="i i-top-stories"></i>
+        <span class="control__text">Top stories</span>
+        <i class="control__icon i i-top-stories"></i>
     </a>
 </header>
 
