--- a/common/app/assets/stylesheets/layout/_grid.scss
+++ b/common/app/assets/stylesheets/layout/_grid.scss
@@ -89,3 +89,13 @@ $from: $gridWidth * $gridColMin * 2;
         }
     }
 }
+
+
+@for $i from 1 through 10 {
+    .grid-h-unit-#{$i} {
+        /*@extend %grid-box;*/
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+        height: (36px * $i) + (12px * ($i - 1));
+    }
+}
