--- a/common/app/assets/stylesheets/module/trails/_trailblock.scss
+++ b/common/app/assets/stylesheets/module/trails/_trailblock.scss
@@ -10,6 +10,7 @@
 
 /* Trailblock expandables
    ========================================================================== */
+.front-section .trailblock.is-shut > ul,
 .trailblock.is-shut .panel {
   display: none;
 }
