--- a/common/app/assets/stylesheets/module/_cta.scss
+++ b/common/app/assets/stylesheets/module/_cta.scss
@@ -18,6 +18,7 @@
 .cta__text {
   @extend %type-7;
   color: $linkBlue;
+  margin-left: 8px;
 }
 
 
@@ -91,7 +92,6 @@
    ========================================================================== */
 .cta__btn--right {
   float:right;
-  border-left-width: 1px;
 
   .i {
     left: 2px;
